@@ -16,7 +16,6 @@
 
     <properties>
         <surefire.args>
-            --add-exports=org.mule.runtime.artifact.ast/org.mule.runtime.ast.internal.model=org.mule.runtime.extensions.mule.support
             ${surefire.test.unit.open.args}
         </surefire.args>
 
